[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent_sre"
version = "4.1.0"
description = "Deprecated. Previously published as agent-sre. Install agent-governance-toolkit-cli instead."
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Microsoft Corporation", email = "agentgovtoolkit@microsoft.com"},
]
dependencies = ["agent-governance-toolkit-cli>=4.0.0,<5.0"]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
"Migration Guide" = "https://github.com/microsoft/agent-governance-toolkit/blob/main/docs/package-consolidation/MIGRATION.md"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_sre"]
