[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-governance-toolkit-cli"
version = "4.1.0"
description = "CLI tools and infrastructure servers for the Agent Governance Toolkit."
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Microsoft Corporation", email = "agentgovtoolkit@microsoft.com"},
]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
Changelog = "https://github.com/microsoft/agent-governance-toolkit/releases"

[tool.hatch.build.targets.wheel]
packages = []
