[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-governance-toolkit-integrations"
version = "4.1.0"
description = "Framework integration adapters for the Agent Governance Toolkit."
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Microsoft Corporation", email = "agentgovtoolkit@microsoft.com"},
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.1.0",
]
crewai = [
    "crewai>=0.1.0",
]
openai-agents = [
    "openai-agents>=0.1.0",
]
langgraph = [
    "langgraph>=0.1.0",
]
llamaindex = [
    "llama-index-core>=0.1.0",
]
haystack = [
    "haystack-ai>=2.0.0",
]
pydantic-ai = [
    "pydantic-ai>=0.1.0",
]
flowise = [
    "flowise>=1.0.0",
]
langflow = [
    "langflow>=1.0.0",
]
adk = [
    "google-adk>=0.1.0",
]
avp = [
    "boto3>=1.0.0",
]
cedarling = [
    "cedarpy>=4.0.0",
]
nostr-wot = [
    "nostr-sdk>=0.1.0",
]
structural-authz = [
    "oso>=0.1.0",
]
openshell = [

]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
Changelog = "https://github.com/microsoft/agent-governance-toolkit/releases"

[tool.hatch.build.targets.wheel]
packages = []
