[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llamaindex_agentmesh"
version = "4.1.0"
description = "Deprecated. Previously published as llamaindex-agentmesh. Install agent-governance-toolkit-integrations[llamaindex] instead."
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Microsoft Corporation", email = "agentgovtoolkit@microsoft.com"},
]
dependencies = [
    "agent-governance-toolkit-integrations[llamaindex]>=4.1.0,<5.0",
    # Deprecated stub. The worker imports `AgentRunner` from
    # `llama_index.core.agent`, which upstream removed in llama-index-core 0.13.
    # The published agent-governance-toolkit-integrations[llamaindex] extra only
    # caps `<1.0`, so without this direct pin CI resolves 0.14 and the smoke
    # import fails. Pin here so the editable install binds <0.13 directly.
    # See https://github.com/microsoft/agent-governance-toolkit/issues/2955
    "llama-index-core>=0.12,<0.13",
]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
"Migration Guide" = "https://github.com/microsoft/agent-governance-toolkit/blob/main/docs/package-consolidation/MIGRATION.md"

[tool.hatch.build.targets.wheel]
packages = ["llama_index"]
