[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openai_agents_agentmesh"
version = "4.1.0"
description = "Deprecated. Previously published as openai-agents-agentmesh. Install agent-governance-toolkit-integrations[openai-agents] instead."
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Microsoft Corporation", email = "agentgovtoolkit@microsoft.com"},
]
dependencies = ["agent-governance-toolkit-integrations[openai-agents]>=4.1.0,<5.0"]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
"Migration Guide" = "https://github.com/microsoft/agent-governance-toolkit/blob/main/docs/package-consolidation/MIGRATION.md"

[tool.hatch.build.targets.wheel]
packages = ["openai_agents_agentmesh"]
