[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic_ai_agentmesh"
version = "4.1.0"
description = "Deprecated. Previously published as pydantic-ai-agentmesh. Install agent-governance-toolkit-integrations[pydantic-ai] instead."
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Microsoft Corporation", email = "agentgovtoolkit@microsoft.com"},
]
dependencies = ["agent-governance-toolkit-integrations[pydantic-ai]>=4.1.0,<5.0"]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
"Migration Guide" = "https://github.com/microsoft/agent-governance-toolkit/blob/main/docs/package-consolidation/MIGRATION.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_ai_governance"]
